## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += assert_h.m4
EXTRA_DIST += c-bool.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += errno_h.m4
EXTRA_DIST += extensions-aix.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += limits-h.m4
EXTRA_DIST += locale-en.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += off64_t.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += pid_t.m4
EXTRA_DIST += socklen.m4
EXTRA_DIST += sockpfaf.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += std-gnu11.m4
EXTRA_DIST += stdalign.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += stdlib_h.m4
EXTRA_DIST += sys_socket_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += sys_uio_h.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_h.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += zzgnulib.m4
